KubernetesLLM/Database/mongodb-express-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
  externalIPs:
  - 192.168.49.2
